src/testFunctional/testData/org/intellij/xquery/annotator/variable/Unresolved.xq
$<error descr="Cannot resolve variable 'var'">var</error>